--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <div class="prompt">&gt; (03/19/24) Gave an invited talk at Columbia University! Thank you <a href="http://user.astro.columbia.edu/~frits/Frits.html" target="_blank" style="color: #33ff33;">Frits</a> for hosting :)</div> 
       <div class="prompt">&gt; (01/08/24) Awarded the PEAK Summit Research Award ($3,000)</div> -->
       <br><div class="input">Links</div> 
-      <div class="prompt">&gt; <a href="cv.html" style="color: #33ff33;">CV</a>, <a href="publications.html" style="color: #33ff33;">Publications</a>, <a href="https://scholar.google.com/citations?user=rMjtDxQAAAAJ&hl=en&authuser=2" target="_blank" style="color: #33ff33;">Google Scholar</a>, <a href="https://github.com/EdwardBerman" target="_blank" style="color: #33ff33;">GitHub</a>, <a href="newHeadshotMain.jpg" target="_blank" style="color: #33ff33;">Headshot</a>, <a href="https://github.com/EdwardBerman/DotfilesBebop" target="_blank" style="color: #33ff33;">Dotfiles</a></div> 
+      <div class="prompt">&gt; <a href="about.html" style="color: #33ff33;">About</a>, <a href="cv.html" style="color: #33ff33;">CV</a>, <a href="publications.html" style="color: #33ff33;">Publications</a>, <a href="https://scholar.google.com/citations?user=rMjtDxQAAAAJ&hl=en&authuser=2" target="_blank" style="color: #33ff33;">Google Scholar</a>, <a href="https://github.com/EdwardBerman" target="_blank" style="color: #33ff33;">GitHub</a>, <a href="newHeadshotMain.jpg" target="_blank" style="color: #33ff33;">Headshot</a>, <a href="https://github.com/EdwardBerman/DotfilesBebop" target="_blank" style="color: #33ff33;">Dotfiles</a></div> 
 <!--      <br><div class="input">Select Papers</div> 
 <div class="prompt">&gt; Berman et al. Efficient PSF Modeling with ShOpt.jl: A PSF Benchmarking Study with JWST NIRCam Imaging. <a href="https://arxiv.org/abs/2401.11625" target="_blank" style="color: #33ff33;">Link</a></div> -->
 <!--      <br><div class="input">Writing</div> 
@@ -136,13 +136,6 @@
       <br><div class="input">Coordinates</div> 
       <div class="input">&gt; email: berman [dot] ed [at] northeastern [dot] edu</div> 
       <div class="input">&gt; Discord: bermanator</div> 
-      <br><div class="input">JWST COSMOS</div> 
-      <div class="input">&gt; The background of this website is one of the "Pillars of the Creation", an area of active star formation in the Eagle Nebula captured by the Hubble Telescope. I am working on imaging techniques for the higher resolution, infrared imager in the James Webb Space Telescope with the COSMOS-Web Survey. This image was produced using the wonderful AstroImage.jl library. I used the vanimo colorscheme to make it pretty.</div> 
-      <br><div class="input">If you know the answer to this question, please send me an email.</div> 
-      <div class="input">&gt; What makes a city unique?</div> 
-
-      <br><div class="input">Jukebox</div> 
-      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator&theme=0" width="50%" height="75" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       <!-- <br><div class="input">Fun</div> 
        <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <div class="input">&gt; My online handle is often <b>bermanator</b> or some variant</div>
