--- a/cv.html
+++ b/cv.html
@@ -156,6 +156,15 @@
       <b> &gt; Math 4571 Advanced Linear Algebra;</b> Spring 2024<br>
       <b> &gt; Math 2331 Linear Algebra;</b> Fall 2022<br>
       </p>
+      <div class="input"><b>Talks</b></div> 
+      <p>
+      <b> &gt; COSMOS 2024: Cosmology with Cosmos Web (With Jacqueline McCleary) </b><br>
+      <b> &gt; Northeastern University RISE Expo: Shear Optimization with ShOpt </b><br>
+      <b> &gt; Rubin in Boston Day Lightning Talk: The JWST Point Spread Function </b><br>
+      <b> &gt; Columbia University: The JWST Point Spread Function </b><br>
+      <b> &gt; COSMOS 2023: Empirical Characterization of the NIRCam Point Spread Function (With Jacqueline McCleary) </b><br>
+      <b> &gt; Borwn University SUMS: Empirical Characterization of the PSF </b><br>
+      <b> &gt; VICEROY Symposium </b><br>
       <div class="input"><b>Community and Academic Service</b></div> 
       <p>
       <b> &gt; GammaTau Reading Group Organizer</b><br>
