--- a/cv.html
+++ b/cv.html
@@ -163,7 +163,7 @@
       <b> &gt; Rubin in Boston Day Lightning Talk: The JWST Point Spread Function </b><br>
       <b> &gt; Columbia University: The JWST Point Spread Function </b><br>
       <b> &gt; COSMOS 2023: Empirical Characterization of the NIRCam Point Spread Function (With Jacqueline McCleary) </b><br>
-      <b> &gt; Borwn University SUMS: Empirical Characterization of the PSF </b><br>
+      <b> &gt; Brown University SUMS: Empirical Characterization of the PSF </b><br>
       <b> &gt; VICEROY Symposium </b><br>
       <div class="input"><b>Community and Academic Service</b></div> 
       <p>
