--- a/peeps.html
+++ b/peeps.html
@@ -122,7 +122,7 @@
     <div class="terminal-body"> 
       <div class="prompt">Eddie Berman / A List of People I Know <a href="index.html" style="color: #33ff33;">   (Back)</a><br> <br>
 
-        <div class="prompt">&gt; <a href="https://priime.dev/about" style="color: #33ff33;" target="_blank">Lucus</a> </div> 
+        <div class="prompt">&gt; <a href="https://priime.dev" style="color: #33ff33;" target="_blank">Lucus</a> </div> 
         <div class="prompt">&gt; <a href="https://jakegines.in/" style="color: #33ff33;" target="_blank">Jake</a> </div> 
         <div class="prompt">&gt; <a href="https://federico.codes/" style="color: #33ff33;" target="_blank">Federico</a> </div> 
         <div class="prompt">&gt; <a href="https://noahshinn.com/" style="color: #33ff33;" target="_blank">Noah</a> </div> 
