--- a/cie.html
+++ b/cie.html
@@ -121,12 +121,8 @@
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
- <div class="prompt">$ Eddie Berman / Publications <a href="index.html" style="color: #ff3333;">   (Back)</a></div>
- <br><div class="input"><a href="erdos.html" style="color: #ff3333;">Erd&#246;s</a> Number: 4. H-Index: 2.</div> 
- <p><b>Efficient PSF Modeling with ShOpt.jl: A PSF Benchmarking Study with JWST NIRCam Imaging</b><br><u>Edward Berman</u>, Jacqueline McCleary, et al. <br><b>Astronomical Journal. <a href="https://arxiv.org/abs/2401.11625" style="color: #ff3333;" target="_blank">PDF</a></b> <b><a href="shopt.html" style="color: #ff3333;">Summary</a></b></p> 
-      <p><b>ShOpt.jl : A Julia Package for Empirical Point Spread Function Characterization of JWST NIRCam Data</b><br><u>Edward Berman</u>, Jacqueline McCleary <br><b>Journal of Open Source Software, AAS Companion Paper. <a href="https://www.theoj.org/joss-papers/joss.06144/10.21105.joss.06144.pdf" style="color: #ff3333;" target="_blank">PDF</a></b>  <b><a href="joss_shopt.html" style="color: #ff3333;">Summary</a></b> </p>
-      <p><b>Can It Edit? Evaluating the Ability of Large Language Models to Follow Code Editing Instructions</b><br>Federico Cassano, Luisa Li, Akul Sethi, Noah Shinn, Abby Brennan-Jones, Jacob Ginesin, <u>Edward Berman</u>, George Chakhnashvili, Anton Lozhkov, Carolyn Jane Anderson, Arjun Guha<br><b>Conference on Language Modeling (COLM). <a href="https://arxiv.org/abs/2312.12450" target="_blank" style="color: #ff3333;">PDF</a></b> <b><a href="cie.html" style="color: #ff3333;">Summary</a></b>   </p>
-      <p><b>Reflexion: Language Agents with Verbal Reinforcement Learning</b><br>Noah Shinn, Federico Cassano, <u>Edward Berman</u>, Ashwin Gopinath, Karthik Narasimhan, Shunyu Yao<br><b>Advances in Neural Information Processing Systems (NeurIPS). <a href="https://arxiv.org/abs/2303.11366" target="_blank" style="color: #ff3333;">PDF</a></b> <b><a href="reflect.html" style="color: #ff3333;">Summary</a></b>   </p>
+ <div class="prompt">$ Eddie Berman / Publications / Cassano et al. (1) <a href="publications.html" style="color: #ff3333;">   (Back)</a></div>
+      <p><b>We develop benchmarks to evaluate large language models on code editing performance, as previous benchmarks proved insufficient. We also fine-tune models specifically for code editing.</b>
       <!-- <br><div class="input">Fun</div> 
        <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <div class="input">&gt; My online handle is often <b>bermanator</b> or some variant</div>
