--- a/peeps.html
+++ b/peeps.html
@@ -132,6 +132,7 @@
         <div class="prompt">&gt; <a href="https://www.becklabash.com/" style="color: #33ff33;" target="_blank">Beck</a> </div> 
         <div class="prompt">&gt; <a href="https://zack-eisbach-wkpfa.ondigitalocean.app/" style="color: #33ff33;" target="_blank">Zack</a> </div> 
         <div class="prompt">&gt; <a href="https://jackmadden.me/" style="color: #33ff33;" target="_blank">Jack</a> </div> 
+        <div class="prompt">&gt; <a href="https://mtedeschi.xyz/" style="color: #33ff33;" target="_blank">Mauricio</a> </div> 
 
 
       </div>
