--- a/peeps.html
+++ b/peeps.html
@@ -134,6 +134,7 @@
         <div class="prompt">&gt; <a href="https://jackmadden.me/" style="color: #33ff33;" target="_blank">Jack</a> </div> 
         <div class="prompt">&gt; <a href="https://mtedeschi.xyz/" style="color: #33ff33;" target="_blank">Mauricio</a> </div> 
         <div class="prompt">&gt; <a href="https://www.cyberspaceatkinson.com/" style="color: #33ff33;" target="_blank">K</a> </div> 
+        <div class="prompt">&gt; <a href="https://henrybarthelemy.com/" style="color: #33ff33;" target="_blank">Henry</a> </div> 
 
 
       </div>
