--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
    </div>
       <br>
       <div class="input">The background of this website is one of the "Pillars of the Creation", an area of active star formation in the Eagle Nebula captured by the Hubble Telescope. I am working on imaging techniques for the higher resolution, infrared imager in the James Webb Space Telescope with the COSMOS-Web Survey. This image was produced using the wonderful AstroImage.jl library. I used the vanimo colorscheme to make it pretty.</div> 
-      <br><div class="input">I am currently pursueing a double major in Applied Physics and Mathematics. In Fall 2026, I will declare for the NHL draft in hopes of fullfilling my life long dream of being the 3rd line center for the Quebec Nordiques.</div> 
+      <br><div class="input">In Fall 2026, I will declare for the NHL draft. I hope to fullfill my life long dream of being the 3rd line center for the Quebec Nordiques.</div> 
 
       <br><div class="input">Jukebox</div> 
       <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator&theme=0" width="50%" height="75" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
