--- a/about.html
+++ b/about.html
@@ -121,10 +121,8 @@
     </div>-->
     <div class="terminal-body"> 
       <div class="prompt">$ Eddie Berman / About <a href="index.html" style="color: #33ff33;">   (Back)</a></div><br>
-      <div class="prompt">I am interested in differentiable programming, machine learning, and cosmology. I also spend a great deal of time thinking about weak gravitational lensing. 
+      <div class="prompt">Differentiable programming, geometric deep learning, and cosmology (weak lensing). 
    </div>
-      <br>
-      <br><div class="input">In Fall 2026, I will declare for the NHL draft. I hope to fullfill my life long dream of being the 3rd line center for the Quebec Nordiques.</div> 
 
       <br><div class="input">Jukebox</div> 
       <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator&theme=0" width="50%" height="75" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
