--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
             font-family: monospace;
         }
   body {
-    background-image: url('astro_out.png');
+    background-image: url('alt_astro_out.png');
     background-size: cover; /* Cover the entire window */
     background-position: center center; /* Center the image in the window */
     background-attachment: fixed;
     
     background-color: #0a0a0a;
     font-family: 'Courier New', Courier, monospace;
-    color: #33ff33;
+    color: #ff3333;
     margin: 0;
     line-height: 1.5; /* Increase the line-height for more space between lines */
     padding: 0;
@@ -44,7 +44,7 @@
     /*background-color: #0d0d0d;*/
     border-radius: 5px;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
+    box-shadow: 0 0 10px rgba(255, 51, 51, 0.5);
     width: 80%; /* Adjust the width as per your requirement */
     max-width: 1000px; /* Optional: if you want to limit the maximum width */
     max-height: 90vh; /* Prevent terminal from exceeding viewport height */
@@ -126,7 +126,7 @@
       <div class="prompt">&gt; (03/19/24) Gave an invited talk at Columbia University! Thank you <a href="http://user.astro.columbia.edu/~frits/Frits.html" target="_blank" style="color: #33ff33;">Frits</a> for hosting :)</div> 
       <div class="prompt">&gt; (01/08/24) Awarded the PEAK Summit Research Award ($3,000)</div> -->
       <br><div class="input">Links</div> 
-      <div class="prompt">&gt; <a href="about.html" style="color: #33ff33;">About</a>, <a href="cv.html" style="color: #33ff33;">CV</a>, <a href="publications.html" style="color: #33ff33;">Publications</a>, <a href="https://scholar.google.com/citations?user=rMjtDxQAAAAJ&hl=en&authuser=2" target="_blank" style="color: #33ff33;">Google Scholar</a>, <a href="https://github.com/EdwardBerman" target="_blank" style="color: #33ff33;">GitHub</a>, <a href="newHeadshotMain.jpg" target="_blank" style="color: #33ff33;">Headshot</a>, <a href="https://github.com/EdwardBerman/DotfilesBebop" target="_blank" style="color: #33ff33;">Dotfiles</a></div> 
+      <div class="prompt">&gt; <a href="about.html" style="color: #ff3333;">About</a>, <a href="cv.html" style="color: #ff3333;">CV</a>, <a href="publications.html" style="color: #ff3333;">Publications</a>, <a href="https://scholar.google.com/citations?user=rMjtDxQAAAAJ&hl=en&authuser=2" target="_blank" style="color: #ff3333;">Google Scholar</a>, <a href="https://github.com/EdwardBerman" target="_blank" style="color: #ff3333;">GitHub</a>, <a href="newHeadshotMain.jpg" target="_blank" style="color: #ff3333;">Headshot</a>, <a href="https://github.com/EdwardBerman/DotfilesBebop" target="_blank" style="color: #ff3333;">Dotfiles</a></div> 
 <!--      <br><div class="input">Select Papers</div> 
 <div class="prompt">&gt; Berman et al. Efficient PSF Modeling with ShOpt.jl: A PSF Benchmarking Study with JWST NIRCam Imaging. <a href="https://arxiv.org/abs/2401.11625" target="_blank" style="color: #33ff33;">Link</a></div> -->
 <!--      <br><div class="input">Writing</div> 
