--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
         }
   body {
     background-image: url('alt_astro_out.png');
+    font-size: 20px; /* Adjust this to your preferred size */
     background-size: cover; /* Cover the entire window */
     background-position: center center; /* Center the image in the window */
     background-attachment: fixed;
