--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             border: none;
             color: lightgreen;
             line-height: 1.5;
-            font-size: 16px; /* Set the font size */
+            font-size: 1000px; /* Set the font size */
             /*text-decoration: underline;*/
             cursor: pointer;
             padding: 0;
@@ -29,6 +29,7 @@
     
     background-color: #0a0a0a;
     font-family: 'Courier New', Courier, monospace;
+    font-size: 20px; /* Adjust this to your preferred size */
     color: #ff3333;
     margin: 0;
     line-height: 1.5; /* Increase the line-height for more space between lines */
