--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
     
     background-color: #0a0a0a;
     font-family: 'Courier New', Courier, monospace;
+    font-weight: bold; /* Make the font bolder */
     color: #ff3333;
     margin: 0;
     line-height: 1.5; /* Increase the line-height for more space between lines */
