--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     
     background-color: #0a0a0a;
     font-family: 'Courier New', Courier, monospace;
+    font-weight: bold; /* Make the font bolder */
     font-size: 20px; /* Adjust this to your preferred size */
     color: #ff3333;
     margin: 0;
