--- a/publications.html
+++ b/publications.html
@@ -121,7 +121,7 @@
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
- <div class="prompt">$ Eddie Berman / Publications <a href="index.html" style="color: #ff3333;">   (Back)</a></div>
+      <div class="prompt"><b>$ Eddie Berman / Publications <a href="index.html" style="color: #ff3333;">   (Back)</a></b></div>
  <br><div class="input"><a href="erdos.html" style="color: #ff3333;">Erd&#246;s</a> Number: 4. H-Index: 2.</div> 
  <p><b>Efficient PSF Modeling with ShOpt.jl: A PSF Benchmarking Study with JWST NIRCam Imaging</b><br><u>Edward Berman</u>, Jacqueline McCleary, et al. <br><b>Astronomical Journal. <a href="https://arxiv.org/abs/2401.11625" style="color: #ff3333;" target="_blank">PDF</a></b> <b><a href="shopt.html" style="color: #ff3333;">Summary</a></b></p> 
       <p><b>ShOpt.jl : A Julia Package for Empirical Point Spread Function Characterization of JWST NIRCam Data</b><br><u>Edward Berman</u>, Jacqueline McCleary <br><b>Journal of Open Source Software, AAS Companion Paper. <a href="https://www.theoj.org/joss-papers/joss.06144/10.21105.joss.06144.pdf" style="color: #ff3333;" target="_blank">PDF</a></b>  <b><a href="joss_shopt.html" style="color: #ff3333;">Summary</a></b> </p>
