--- a/cv.html
+++ b/cv.html
@@ -22,14 +22,16 @@
             font-family: monospace;
         }
   body {
-    background-image: url('cv_astro_out.png');
+    background-image: url('alt_astro_out.png');
+    font-size: 20px; /* Adjust this to your preferred size */
     background-size: cover; /* Cover the entire window */
     background-position: center center; /* Center the image in the window */
     background-attachment: fixed;
     
     background-color: #0a0a0a;
     font-family: 'Courier New', Courier, monospace;
-    color: #6666ff;
+    font-weight: bold; /* Make the font bolder */
+    color: #ff3333;
     margin: 0;
     line-height: 1.5; /* Increase the line-height for more space between lines */
     padding: 0;
@@ -44,7 +46,7 @@
     /*background-color: #0d0d0d;*/
     border-radius: 5px;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(51, 51, 255, 0.5);
+    box-shadow: 0 0 10px rgba(255, 51, 51, 0.5);
     width: 80%; /* Adjust the width as per your requirement */
     max-width: 1000px; /* Optional: if you want to limit the maximum width */
     max-height: 90vh; /* Prevent terminal from exceeding viewport height */
@@ -120,11 +122,11 @@
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
- <div class="prompt">$ Eddie Berman / CV <a href="index.html" style="color: #6666ff;">   (Back)</a></div>
+ <div class="prompt">$ Eddie Berman / CV <a href="index.html" style="color: #ff3333;">   (Back)</a></div>
  <br><div class="input"><b>Education</b></div> 
       <p><b> &gt; Bachelor of Science Applied Physics;</b> 2021-2025<br><b> &gt; Bachelor of Science Mathematics;</b> 2021-2025</p> 
       <div class="input"><b>Publications</b></div> 
-      <p><b> &gt; <a href="publications.html" style="color: #6666ff;" target="_blank">[Here]</a></b></p>
+      <p><b> &gt; <a href="publications.html" style="color: #ff3333;" target="_blank">[Here]</a></b></p>
       <div class="input"><b>Employment</b></div> 
       <p>
       <b> &gt; Network Science Institute, Northeastern University;</b> 07/24-Present<br>
@@ -172,7 +174,7 @@
       <b> &gt; Society of Physics Students Northeastern Chapter;</b> Events and Outreach Coordinator<br>
       </p>
       <div class="input"><b>Coursework</b></div> 
-      <p><b> &gt; <a href="courses.html" style="color: #6666ff;">[Here]</a></b></p>
+      <p><b> &gt; <a href="courses.html" style="color: #ff3333;">[Here]</a></b></p>
       
       <!-- <br><div class="input">Fun</div> 
        <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
