--- a/courses.html
+++ b/courses.html
@@ -22,14 +22,16 @@
             font-family: monospace;
         }
   body {
-    background-image: url('courses_astro_out.png');
+    background-image: url('alt_astro_out.png');
+    font-size: 20px; /* Adjust this to your preferred size */
     background-size: cover; /* Cover the entire window */
     background-position: center center; /* Center the image in the window */
     background-attachment: fixed;
     
     background-color: #0a0a0a;
     font-family: 'Courier New', Courier, monospace;
-    color: #33ffff;
+    font-weight: bold; /* Make the font bolder */
+    color: #ff3333;
     margin: 0;
     line-height: 1.5; /* Increase the line-height for more space between lines */
     padding: 0;
@@ -44,7 +46,7 @@
     /*background-color: #0d0d0d;*/
     border-radius: 5px;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 255, 255, 0.5);
+    box-shadow: 0 0 10px rgba(255, 51, 51, 0.5);
     width: 80%; /* Adjust the width as per your requirement */
     max-width: 1000px; /* Optional: if you want to limit the maximum width */
     max-height: 90vh; /* Prevent terminal from exceeding viewport height */
@@ -120,24 +122,25 @@
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
-      <div class="prompt">$ Eddie Berman / CV / Northeastern Courses <a href="cv.html" style="color: #33ffff;">   (Back)</a><br> <br>
+      <div class="prompt">$ Eddie Berman / CV / Northeastern Courses <a href="cv.html" style="color: #ff3333;">   (Back)</a><br> <br>
 
         <!--<div class="prompt">&gt; Phys 7301 Classical Mechanics/Math Methods</div> -->
-<div class="prompt">&gt; Math 7234 Optimization and Complexity</div> 
-<div class="prompt">&gt; Math 7223 Riemannian Optimization</div> 
+<div class="prompt">&gt; Math 7234 Optimization and Complexity (PhD Level)</div> 
+<div class="prompt">&gt; Math 7223 Riemannian Optimization (PhD Level)</div> 
 <!--<div class="prompt">&gt; Math 5131 Introduction to Mathematical Methods and Modeling</div>-->  
-<div class="prompt">&gt; Phys 5118 General Relativity and Cosmology</div> 
+<div class="prompt">&gt; Phys 5118 General Relativity and Cosmology (Masters Level)</div> 
+<div class="prompt">&gt; Math 4994 Internship</div> 
 <div class="prompt">&gt; Math 4991 Research Independent Study (Machine Learning PDE Discovery)</div> 
 <div class="prompt">&gt; Phys 4606 Mathematical and Computational Methods for Physics</div> 
-<div class="prompt">&gt; Math 4571 Advanced Linear Algebra</div> 
+<div class="prompt">&gt; Math 4571 <u>Advanced</u> Linear Algebra</div> 
 <!--<div class="prompt">&gt; Math 4555 Complex Variables</div> -->
 <div class="prompt">&gt; Math 4545 Fourier Series and PDEs</div> 
 <div class="prompt">&gt; Phys 4305 Thermodynamics and Statistical Mechanics</div> 
 <div class="prompt">&gt; Phys 4115 Quantum Mechanics</div>  
 <div class="prompt">&gt; Phys 3601 Electricity and Magnetism 1</div>  
-<div class="prompt">&gt; Engw 3307 Advanced Writing in the Sciences</div>  
-<div class="prompt">&gt; Math 3275 Advanced Group Theory</div> 
-<div class="prompt">&gt; Math 3181 Advanced Probability and Statistics</div> 
+<div class="prompt">&gt; Engw 3307 <u>Advanced</u> Writing in the Sciences</div>  
+<div class="prompt">&gt; Math 3275 <u>Advanced</u> Group Theory</div> 
+<div class="prompt">&gt; Math 3181 <u>Advanced</u> Probability and Statistics</div> 
 <!--<div class="prompt">&gt; Math 3150 Real Analysis</div> -->
 <div class="prompt">&gt; Pols 2358 Current Issues in Cities and Suburbs</div> 
 <div class="prompt">&gt; Math 2341 Differential Equations and Linear Algebra</div> 
