--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
       <br><div class="input">Coordinates</div> 
       <div class="input">&gt; email: berman [dot] ed [at] northeastern [dot] edu</div> 
-      <div class="input">&gt; Discord: bermanator</div> 
+      <div class="input">&gt; Researcher: Network Science Institute, Boston MA</div> 
       <!-- <br><div class="input">Fun</div> 
        <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <div class="input">&gt; My online handle is often <b>bermanator</b> or some variant</div>
