--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
     </div>-->
     <div class="terminal-body"> 
       <div class="prompt">$ Eddie Berman / About <a href="index.html" style="color: #ff3333;">   (Back)</a></div><br>
-      <div class="prompt">Differentiable programming, geometric deep learning, and cosmology (weak lensing). 
+      <div class="prompt">Differentiable programming, geometric deep learning, and cosmology (weak lensing). Occasional language modeling.
    </div>
 
 <img src="silly.png" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;">
