--- a/about.html
+++ b/about.html
@@ -129,6 +129,7 @@
 <img src="silly.png" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;">
       <br><div class="input">Jukebox</div> 
       <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator&theme=0" width="50%" height="75" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      <script src="https://gist.github.com/EdwardBerman/45ae57cbff5dcf2126bcd64d307c5e28.js"></script>
 <a href="ascii-art.txt"></a>
      </div>
       </div>
