--- a/bibs/perspective_bib.html
+++ b/bibs/perspective_bib.html
@@ -23,7 +23,6 @@
         }
   body {
     background-image: url('alt_astro_out.png');
-    font-size: 20px; /* Adjust this to your preferred size */
     background-size: cover; /* Cover the entire window */
     background-position: center center; /* Center the image in the window */
     background-attachment: fixed;
@@ -122,19 +121,9 @@
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
-      <div class="prompt"><b>$ Eddie Berman / Publications <a href="index.html" style="color: #ff3333;">   (Back)</a></b></div>
- <br><div class="input"><a href="erdos.html" style="color: #ff3333;">Erd&#246;s</a> Number: 4. H-Index: 2.</div> 
- <br><div class="input">2025</div> 
-      <p><b>On Differentiable Correlation Functions</b><br><u>Edward Berman</u>, Jacqueline McCleary<br><b>American Astronomical Society Winter Session (to appear), <i>Oral</i>. </b> </p>
- <br><div class="input">2024</div> 
-      <p><b>The State of Julia for Scientific Machine Learning</b><br><u>Edward Berman</u>, Jacob Ginesin<br><b>NeurIPS Machine Learning and the Physical Sciences Workshop (ML4PS), Perspectives Track, <i>Oral Spotlight</i>.</b> <b><a href="https://arxiv.org/pdf/2410.10908" style="color: #ff3333;" target="_blank">PDF</a></b>  <b><a href="perspective.html" style="color: #ff3333;">Summary</a></b>  <b><a href="bibs/perspective_bib.html" style="color: #ff3333;">BibTex</a></b> </p>
-      <p><b>Not-so-little Red Dots:Two massive and dusty starbursts at z~5-7 pushing the limits of star formation discovered by JWST in the COSMOS-Web survey</b><br>Fabrizio Gentile, Caitlin M. Casey, Hollis B. Akins, Maximilien Franco, Jed McKinney, <u>Edward Berman</u>, Olivia R. Cooper, Nicole E. Drakos, Michaela Hirschmann, Arianna S. Long, Georgios Magdis, Anton M. Koekemoer, Vasily Kokorev, Marko Shuntov, Margherita Talia, Natalie Allen, Santosh Harish, Olivier Ilbert, Henry J. McCracken, Jeyhan S. Kartaltepe, Daizhong Liu, Louise Paquereau, Jason Rhodes, Michael R. Rich, Brant Robertson, Sune Toft, Ghassem Gozaliasl<br><b>Astrophysical Journal Letters. <a href="https://arxiv.org/abs/2408.10305" target="_blank" style="color: #ff3333;">PDF</a></b>  </p>
-      <p><b>Can It Edit? Evaluating the Ability of Large Language Models to Follow Code Editing Instructions</b><br>Federico Cassano, Luisa Li, Akul Sethi, Noah Shinn, Abby Brennan-Jones, Jacob Ginesin, <u>Edward Berman</u>, George Chakhnashvili, Anton Lozhkov, Carolyn Jane Anderson, Arjun Guha<br><b>Conference on Language Modeling (COLM). <a href="https://arxiv.org/abs/2312.12450" target="_blank" style="color: #ff3333;">PDF</a></b> <b><a href="cie.html" style="color: #ff3333;">Summary</a></b>   </p>
- <p><b>Efficient Point Spread Function Modeling with ShOpt.jl: A Point Spread Function Benchmarking Study with JWST NIRCam Imaging</b><br><u>Edward Berman</u>, Jacqueline McCleary, Anton M. Koekemoer, Maximilien Franco, Nicole E. Drakos, Daizhong Liu, James W. Nightingale, Marko Shuntov, Diana Scognamiglio, Richard Massey, Guillaume Mahler, Henry Joy McCracken, Brant E. Robertson, Andreas L. Faisst, Caitlin M. Casey, Jeyhan S. Kartaltepe, and COSMOS-Web: The JWST Cosmic Origins Survey <br><b>Astronomical Journal. <a href="https://arxiv.org/abs/2401.11625" style="color: #ff3333;" target="_blank">PDF</a></b> <b><a href="shopt.html" style="color: #ff3333;">Summary</a></b></p> 
- <br><div class="input">2023</div> 
-      <p><b>Reflexion: Language Agents with Verbal Reinforcement Learning</b><br>Noah Shinn, Federico Cassano, <u>Edward Berman</u>, Ashwin Gopinath, Karthik Narasimhan, Shunyu Yao<br><b>Advances in Neural Information Processing Systems (NeurIPS). <a href="https://arxiv.org/abs/2303.11366" target="_blank" style="color: #ff3333;">PDF</a></b> <b><a href="reflect.html" style="color: #ff3333;">Summary</a></b>   </p>
-      <p><b>ShOpt.jl : A Julia Package for Empirical Point Spread Function Characterization of JWST NIRCam Data</b><br><u>Edward Berman</u>, Jacqueline McCleary <br><b>Journal of Open Source Software, AAS Companion Paper. <a href="https://www.theoj.org/joss-papers/joss.06144/10.21105.joss.06144.pdf" style="color: #ff3333;" target="_blank">PDF</a></b>  <b><a href="joss_shopt.html" style="color: #ff3333;">Summary</a></b> </p>
-
+ <div class="prompt">$ Eddie Berman / Publications / Berman et al. (3) <a href="publications.html" style="color: #ff3333;">   (Back)</a></div>
+      <p><b>@article{berman2024state, title={The State of Julia for Scientific Machine Learning}, author={Berman, Edward and Ginesin, Jacob}, journal={arXiv preprint arXiv:2410.10908}, year={2024} }
+</b>
       <!-- <br><div class="input">Fun</div> 
        <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <div class="input">&gt; My online handle is often <b>bermanator</b> or some variant</div>
