--- a/bibs/dots_bib.html
+++ b/bibs/dots_bib.html
@@ -122,7 +122,8 @@
     </div>-->
     <div class="terminal-body"> 
  <div class="prompt">$ Eddie Berman / Publications / Berman et al. (3) <a href="../publications.html" style="color: #ff3333;">   (Back)</a></div>
-      <p><b>@article{berman2024state, title={The State of Julia for Scientific Machine Learning}, author={Berman, Edward and Ginesin, Jacob}, journal={arXiv preprint arXiv:2410.10908}, year={2024} }
+ <p><b>@article{gentile2024not, title={Not-so-little Red Dots: Two Massive and Dusty Starbursts at z~ 5--7 Pushing the Limits of Star Formation Discovered by JWST in the COSMOS-Web Survey}, author={Gentile, Fabrizio and Casey, Caitlin M and Akins, Hollis B and Franco, Maximilien and McKinney, Jed and Berman, Edward and Cooper, Olivia R and Drakos, Nicole E and Hirschmann, Michaela and Long, Arianna S and others}, journal={The Astrophysical Journal Letters}, volume={973}, number={1}, pages={L2}, year={2024}, publisher={IOP Publishing} }
+
 </b>
       <!-- <br><div class="input">Fun</div> 
        <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
