--- a/bibs/dots_bib.html
+++ b/bibs/dots_bib.html
@@ -121,7 +121,7 @@
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
- <div class="prompt">$ Eddie Berman / Publications / Berman et al. (3) <a href="../publications.html" style="color: #ff3333;">   (Back)</a></div>
+ <div class="prompt">$ Eddie Berman / Publications / Gentile et al. (3) <a href="../publications.html" style="color: #ff3333;">   (Back)</a></div>
  <p><b>@article{gentile2024not, title={Not-so-little Red Dots: Two Massive and Dusty Starbursts at z~ 5--7 Pushing the Limits of Star Formation Discovered by JWST in the COSMOS-Web Survey}, author={Gentile, Fabrizio and Casey, Caitlin M and Akins, Hollis B and Franco, Maximilien and McKinney, Jed and Berman, Edward and Cooper, Olivia R and Drakos, Nicole E and Hirschmann, Michaela and Long, Arianna S and others}, journal={The Astrophysical Journal Letters}, volume={973}, number={1}, pages={L2}, year={2024}, publisher={IOP Publishing} }
 
 </b>
