--- a/bibs/joss_shopt.html
+++ b/bibs/joss_shopt.html
@@ -22,7 +22,7 @@
             font-family: monospace;
         }
   body {
-    background-image: url('alt_astro_out.png');
+    background-image: url('../alt_astro_out.png');
     background-size: cover; /* Cover the entire window */
     background-position: center center; /* Center the image in the window */
     background-attachment: fixed;
@@ -121,8 +121,9 @@
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
- <div class="prompt">$ Eddie Berman / Publications / Berman et al. (1) <a href="publications.html" style="color: #ff3333;">   (Back)</a></div>
-      <p><b>Companion paper to the full AAS submission, details some of the more intricate software decisions made in developing our PSF fitter ShOpt.jl.</b>
+ <div class="prompt">$ Eddie Berman / Publications / Berman et al. (1) <a href="../publications.html" style="color: #ff3333;">   (Back)</a></div>
+      <p><b>@article{Berman2024, doi = {10.21105/joss.06144}, url = {https://doi.org/10.21105/joss.06144}, year = {2024}, publisher = {The Open Journal}, volume = {9}, number = {100}, pages = {6144}, author = {Edward Berman and Jacqueline McCleary}, title = {ShOpt.jl: A Julia Package for Empirical Point Spread Function Characterization of JWST NIRCam Data}, journal = {Journal of Open Source Software} }
+      </b>
       <!-- <br><div class="input">Fun</div> 
        <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <div class="input">&gt; My online handle is often <b>bermanator</b> or some variant</div>
