--- a/bibs/shopt_bib.html
+++ b/bibs/shopt_bib.html
@@ -22,7 +22,7 @@
             font-family: monospace;
         }
   body {
-    background-image: url('alt_astro_out.png');
+    background-image: url('../alt_astro_out.png');
     background-size: cover; /* Cover the entire window */
     background-position: center center; /* Center the image in the window */
     background-attachment: fixed;
@@ -121,8 +121,9 @@
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
- <div class="prompt">$ Eddie Berman / Publications / Berman et al. (1) <a href="publications.html" style="color: #ff3333;">   (Back)</a></div>
-      <p><b>Companion paper to the full AAS submission, details some of the more intricate software decisions made in developing our PSF fitter ShOpt.jl.</b>
+ <div class="prompt">$ Eddie Berman / Publications / Berman et al. (2) <a href="../publications.html" style="color: #ff3333;">   (Back)</a></div>
+      <p><b>@article{berman2024efficientpsfmodelingshoptjl, doi = {10.3847/1538-3881/ad6a0f}, url = {https://dx.doi.org/10.3847/1538-3881/ad6a0f}, year = {2024}, month = {sep}, publisher = {The American Astronomical Society}, volume = {168}, number = {4}, pages = {174}, author = {Edward M. Berman and Jacqueline E. McCleary and Anton M. Koekemoer and Maximilien Franco and Nicole E. Drakos and Daizhong Liu and James W. Nightingale and Marko Shuntov and Diana Scognamiglio and Richard Massey and Guillaume Mahler and Henry Joy McCracken and Brant E. Robertson and Andreas L. Faisst and Caitlin M. Casey and Jeyhan S. Kartaltepe and COSMOS-Web: The JWST Cosmic Origins Survey}, title = {Efficient Point-spread Function Modeling with ShOpt.jl: A Point-spread Function Benchmarking Study with JWST NIRCam Imaging}, journal = {The Astronomical Journal}, abstract = {With their high angular resolutions of 30–100 mas, large fields of view, and complex optical systems, imagers on next-generation optical/near-infrared space observatories, such as the Near-Infrared Camera (NIRCam) on the James Webb Space Telescope, present new opportunities for science and also new challenges for empirical point-spread function (PSF) characterization. In this context, we introduce ShOpt, a new PSF fitting tool developed in Julia and designed to bridge the advanced features of PSFs in the full field of view (PIFF) with the computational efficiency of PSF Extractor (PSFEx). Along with ShOpt, we propose a suite of nonparametric statistics suitable for evaluating PSF fit quality in space-based imaging. Our study benchmarks ShOpt against the established PSF fitters PSFEx and PIFF using real and simulated COSMOS-Web Survey imaging. We assess their respective PSF model fidelity with our proposed diagnostic statistics and investigate their computational efficiencies, focusing on their processing speed relative to the complexity and size of the PSF models. We find that ShOpt can already achieve PSF model fidelity comparable to PSFEx and PIFF while maintaining competitive processing speeds, constructing PSF models for large NIRCam mosaics within minutes.} }
+      </b>
       <!-- <br><div class="input">Fun</div> 
        <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <div class="input">&gt; My online handle is often <b>bermanator</b> or some variant</div>
