--- a/courses.html
+++ b/courses.html
@@ -124,10 +124,9 @@
     <div class="terminal-body"> 
       <div class="prompt">$ Eddie Berman / CV / Northeastern Courses <a href="cv.html" style="color: #ff3333;">   (Back)</a><br> <br>
 
-        <!--<div class="prompt">&gt; Phys 7301 Classical Mechanics/Math Methods</div> -->
 <div class="prompt">&gt; Math 7234 Optimization and Complexity (PhD Level)</div> 
 <div class="prompt">&gt; Math 7223 Riemannian Optimization (PhD Level)</div> 
-<!--<div class="prompt">&gt; Math 5131 Introduction to Mathematical Methods and Modeling</div>-->  
+<div class="prompt">&gt; Phys 5318 Principles of Experimental Physics (Masters Level)</div> 
 <div class="prompt">&gt; Phys 5118 General Relativity and Cosmology (Masters Level)</div> 
 <div class="prompt">&gt; Math 4994 Internship</div> 
 <div class="prompt">&gt; Math 4991 Research Independent Study (Machine Learning PDE Discovery)</div> 
@@ -137,11 +136,13 @@
 <div class="prompt">&gt; Math 4545 Fourier Series and PDEs</div> 
 <div class="prompt">&gt; Phys 4305 Thermodynamics and Statistical Mechanics</div> 
 <div class="prompt">&gt; Phys 4115 Quantum Mechanics</div>  
+<div class="prompt">&gt; Math 4020 Research Capstone</div>  
+<div class="prompt">&gt; Phys 3602 Electricity and Magnetism 2</div>  
 <div class="prompt">&gt; Phys 3601 Electricity and Magnetism 1</div>  
 <div class="prompt">&gt; Engw 3307 <u>Advanced</u> Writing in the Sciences</div>  
 <div class="prompt">&gt; Math 3275 <u>Advanced</u> Group Theory</div> 
 <div class="prompt">&gt; Math 3181 <u>Advanced</u> Probability and Statistics</div> 
-<!--<div class="prompt">&gt; Math 3150 Real Analysis</div> -->
+<div class="prompt">&gt; Math 3150 Real Analysis</div> 
 <div class="prompt">&gt; Pols 2358 Current Issues in Cities and Suburbs</div> 
 <div class="prompt">&gt; Math 2341 Differential Equations and Linear Algebra</div> 
 <div class="prompt">&gt; Math 2321 Calculus 3 For Science and Engineering</div> 
