--- a/perspective.html
+++ b/perspective.html
@@ -123,13 +123,7 @@
     <div class="terminal-body"> 
  <div class="prompt">$ Eddie Berman / Publications / Berman et al. (3) <a href="publications.html" style="color: #ff3333;">   (Back)</a></div>
       <p><b>How does Julia compare to Python for scientific machine learning tasks? And, is Julia ready for primetime?</b>
-      <!-- <br><div class="input">Fun</div> 
-       <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <div class="input">&gt; My online handle is often <b>bermanator</b> or some variant</div>
-        <div class="input">&gt; I daily drive a System76 Lemur Pro running PopOS with bspwn. My <a href="https://github.com/EdwardBerman/eddies-dotfiles---See-You-Space-Cowboy" target="_blank" style="color: #33ff33;">dotfiles</a> are inspired by <a href="https://github.com/SeniorMars/dotfiles" target="_blank" style="color: #33ff33;">SirCharlieMars</a>, <a href="https://github.com/JakeGinesin/dotfiles" target="_blank" style="color: #33ff33;">Jake Ginesin</a>, <a href="https://github.com/cassanof/dotfiles" target="_blank" style="color: #33ff33;">Federico Cassano</a>, and <a href="https://github.com/VaughnValle/blue-sky" target="_blank" style="color: #33ff33;">VaughnValle</a> </div> -->
-<!-- <div class="input">&gt; <a target="_blank" style="color: #33ff33;" href="https://myanimelist.net/animelist/bermanator29?">My Anime List</a></div>
-<div class="input">&gt; <a target="_blank" style="color: #33ff33;" href="https://myanimelist.net/mangalist/bermanator29?">My Manga List</a></div>
--->    </div>
+    </div>
 <a href="ascii-art.txt"></a>
      </div>
       </div>
