--- a/index.html
+++ b/index.html
@@ -122,29 +122,13 @@
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
-      <div class="prompt"><b>Eddie Berman.</b> Space Cowboy, Dandy Guy, and JWST caretaker. <!--<br><br>I work on Imaging, Lensing, and Simulations for COSMOS-Web: The James Webb Space Telescope Cosmic Origins Survey. See my Google Scholar for a complete list of my publications.--></div>
-      <!--<br><div class="input">News <a href="old_news.html" style="color: #33ff33;">(See Older)</a></div> 
-      <div class="prompt">&gt; (04/23/24) Joining the Network Science Institute as a Research Co-op</div> 
-      <div class="prompt">&gt; (03/19/24) Gave an invited talk at Columbia University! Thank you <a href="http://user.astro.columbia.edu/~frits/Frits.html" target="_blank" style="color: #33ff33;">Frits</a> for hosting :)</div> 
-      <div class="prompt">&gt; (01/08/24) Awarded the PEAK Summit Research Award ($3,000)</div> -->
+      <div class="prompt"><b>Eddie Berman.</b> Space Cowboy, Dandy Guy, and JWST caretaker. </div>
       <br><div class="input">Links</div> 
       <div class="prompt">&gt; <a href="about.html" style="color: #ff3333;">About</a>, <a href="publications.html" style="color: #ff3333;">Publications</a>, <a href="https://scholar.google.com/citations?user=rMjtDxQAAAAJ&hl=en&authuser=2" target="_blank" style="color: #ff3333;">Google Scholar</a>, <a href="https://github.com/EdwardBerman" target="_blank" style="color: #ff3333;">GitHub</a>, <a href="blog.html" style="color: #ff3333;">Blog</a> </div> 
-<!--      <br><div class="input">Select Papers</div> 
-<div class="prompt">&gt; Berman et al. Efficient PSF Modeling with ShOpt.jl: A PSF Benchmarking Study with JWST NIRCam Imaging. <a href="https://arxiv.org/abs/2401.11625" target="_blank" style="color: #33ff33;">Link</a></div> -->
-<!--      <br><div class="input">Writing</div> 
-<div class="prompt">&gt; <a href="blog.html" style="color: #33ff33;">Articles & Blogs</a></div>--> 
-      <!--      <div class="prompt">&gt; <a href="music_page.html" style="color: #33ff33;">Music Reviews</a></div> --> 
-
       <br><div class="input">Coordinates</div> 
       <div class="input">&gt; email: berman [dot] ed [at] northeastern [dot] edu</div> 
       <div class="input">&gt; Network Science Institute, Boston MA</div> 
-      <!-- <br><div class="input">Fun</div> 
-       <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <div class="input">&gt; My online handle is often <b>bermanator</b> or some variant</div>
-        <div class="input">&gt; I daily drive a System76 Lemur Pro running PopOS with bspwn. My <a href="https://github.com/EdwardBerman/eddies-dotfiles---See-You-Space-Cowboy" target="_blank" style="color: #33ff33;">dotfiles</a> are inspired by <a href="https://github.com/SeniorMars/dotfiles" target="_blank" style="color: #33ff33;">SirCharlieMars</a>, <a href="https://github.com/JakeGinesin/dotfiles" target="_blank" style="color: #33ff33;">Jake Ginesin</a>, <a href="https://github.com/cassanof/dotfiles" target="_blank" style="color: #33ff33;">Federico Cassano</a>, and <a href="https://github.com/VaughnValle/blue-sky" target="_blank" style="color: #33ff33;">VaughnValle</a> </div> -->
-<!-- <div class="input">&gt; <a target="_blank" style="color: #33ff33;" href="https://myanimelist.net/animelist/bermanator29?">My Anime List</a></div>
-<div class="input">&gt; <a target="_blank" style="color: #33ff33;" href="https://myanimelist.net/mangalist/bermanator29?">My Manga List</a></div>
--->    </div>
+    </div>
 <a href="ascii-art.txt"></a>
      </div>
       </div>
