--- a/publications.html
+++ b/publications.html
@@ -135,13 +135,7 @@
       <p><b>Reflexion: Language Agents with Verbal Reinforcement Learning</b><br>Noah Shinn, Federico Cassano, <u>Edward Berman</u>, Ashwin Gopinath, Karthik Narasimhan, Shunyu Yao<br><b>Advances in Neural Information Processing Systems (NeurIPS). <a href="https://arxiv.org/abs/2303.11366" target="_blank" style="color: #ff3333;">PDF</a></b> <b><a href="reflect.html" style="color: #ff3333;">Summary</a></b>  <b><a href="bibs/reflect_bib.html" style="color: #ff3333;">BibTex</a></b>  </p>
       <p><b>ShOpt.jl : A Julia Package for Empirical Point Spread Function Characterization of JWST NIRCam Data</b><br><u>Edward Berman</u>, Jacqueline McCleary <br><b>Journal of Open Source Software, AAS Companion Paper. <a href="https://www.theoj.org/joss-papers/joss.06144/10.21105.joss.06144.pdf" style="color: #ff3333;" target="_blank">PDF</a></b>  <b><a href="joss_shopt.html" style="color: #ff3333;">Summary</a></b> <b><a href="bibs/joss_shopt.html" style="color: #ff3333;">BibTex</a></b> </p>
 
-      <!-- <br><div class="input">Fun</div> 
-       <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <div class="input">&gt; My online handle is often <b>bermanator</b> or some variant</div>
-        <div class="input">&gt; I daily drive a System76 Lemur Pro running PopOS with bspwn. My <a href="https://github.com/EdwardBerman/eddies-dotfiles---See-You-Space-Cowboy" target="_blank" style="color: #33ff33;">dotfiles</a> are inspired by <a href="https://github.com/SeniorMars/dotfiles" target="_blank" style="color: #33ff33;">SirCharlieMars</a>, <a href="https://github.com/JakeGinesin/dotfiles" target="_blank" style="color: #33ff33;">Jake Ginesin</a>, <a href="https://github.com/cassanof/dotfiles" target="_blank" style="color: #33ff33;">Federico Cassano</a>, and <a href="https://github.com/VaughnValle/blue-sky" target="_blank" style="color: #33ff33;">VaughnValle</a> </div> -->
-<!-- <div class="input">&gt; <a target="_blank" style="color: #33ff33;" href="https://myanimelist.net/animelist/bermanator29?">My Anime List</a></div>
-<div class="input">&gt; <a target="_blank" style="color: #33ff33;" href="https://myanimelist.net/mangalist/bermanator29?">My Manga List</a></div>
--->    </div>
+    </div>
 <a href="ascii-art.txt"></a>
      </div>
       </div>
