--- a/courses.html
+++ b/courses.html
@@ -124,9 +124,9 @@
     <div class="terminal-body"> 
       <div class="prompt">$ Eddie Berman / CV / Northeastern Courses <a href="cv.html" style="color: #ff3333;">   (Back)</a><br> <br>
 
+<div class="prompt">&gt; Math 7338 Probability and Measure (PhD Level)</div> 
 <div class="prompt">&gt; Math 7234 Optimization and Complexity (PhD Level)</div> 
 <div class="prompt">&gt; Math 7223 Riemannian Optimization (PhD Level)</div> 
-<div class="prompt">&gt; Phys 5318 Principles of Experimental Physics (Masters Level)</div> 
 <div class="prompt">&gt; Phys 5118 General Relativity and Cosmology (Masters Level)</div> 
 <div class="prompt">&gt; Math 4994 Internship</div> 
 <div class="prompt">&gt; Math 4991 Research Independent Study (Machine Learning PDE Discovery)</div> 
@@ -137,7 +137,6 @@
 <div class="prompt">&gt; Phys 4305 Thermodynamics and Statistical Mechanics</div> 
 <div class="prompt">&gt; Phys 4115 Quantum Mechanics</div>  
 <div class="prompt">&gt; Math 4020 Research Capstone</div>  
-<div class="prompt">&gt; Phys 3603 Electricity and Magnetism 2</div>  
 <div class="prompt">&gt; Phys 3602 Electricity and Magnetism 1</div>  
 <div class="prompt">&gt; Engw 3307 <u>Advanced</u> Writing in the Sciences</div>  
 <div class="prompt">&gt; Math 3275 <u>Advanced</u> Group Theory</div> 
@@ -150,6 +149,7 @@
 <div class="prompt">&gt; Phys 2303 Modern Physics</div> 
 <div class="prompt">&gt; CS   1800 Discrete Structures</div> 
 <div class="prompt">&gt; ENVR 1500 Introduction to Environmental, Social, and Biological Data</div> 
+<div class="prompt">&gt; Math 1220 Mathematics of Art</div> 
 
 
       </div>
