--- a/courses.html
+++ b/courses.html
@@ -126,6 +126,7 @@
 
 <div class="prompt">&gt; Math 7234 Optimization and Complexity (PhD Level)</div> 
 <div class="prompt">&gt; Math 7223 Riemannian Optimization (PhD Level)</div> 
+<div class="prompt">&gt; Math 5352 Quantum Computation and Information (Masters Level)</div> 
 <div class="prompt">&gt; Phys 5118 General Relativity and Cosmology (Masters Level)</div> 
 <div class="prompt">&gt; Math 4994 Internship</div> 
 <div class="prompt">&gt; Math 4991 Research Independent Study (Machine Learning PDE Discovery)</div> 
