--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <br><div class="input">Links</div> 
       <div class="prompt">&gt; <a href="about.html" style="color: #ff3333;">About</a>, <a href="publications.html" style="color: #ff3333;">Publications</a>, <a href="https://scholar.google.com/citations?user=rMjtDxQAAAAJ&hl=en&authuser=2" target="_blank" style="color: #ff3333;">Google Scholar</a>, <a href="https://github.com/EdwardBerman" target="_blank" style="color: #ff3333;">GitHub</a>, <a href="blog.html" style="color: #ff3333;">Blog</a> </div> 
       <br><div class="input">Coordinates</div> 
-      <div class="input">&gt; email: berman [dot] ed [at] northeastern [dot] edu</div> 
+      <div class="input">&gt; email: f(berman,  ed, northeastern) where f(x,y,z) = x.y@z.edu</div> 
       <div class="input">&gt; Boston MA</div> 
     </div>
 <a href="ascii-art.txt"></a>
