--- a/courses.html
+++ b/courses.html
@@ -122,7 +122,7 @@
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
-      <div class="prompt">$ Eddie Berman / CV / Northeastern Courses <a href="cv.html" style="color: #ff3333;">   (Back)</a><br> <br>
+      <div class="prompt">$ Eddie Berman / Northeastern Courses <a href="index.html" style="color: #ff3333;">   (Back)</a><br> <br>
 
 <div class="prompt">&gt; Math 7234 Optimization and Complexity (PhD Level)</div> 
 <div class="prompt">&gt; Math 7223 Riemannian Optimization (PhD Level)</div> 
