--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
   <div class="terminal">
     <div class="terminal-body"> 
       <div class="prompt">$ Eddie Berman / About <a href="index.html" style="color: #ff3333;">   (Back)</a></div><br>
-      <div class="prompt">My main interests are at the intersection of Optics, Computer Vision, and Astronomy. Specifically, how can we embed inductive biasses from optical physics into computer vision problems? Similarly, how can we use techniques from computer vision to solve problems in astronomical imaging? I also like to dabble with statistical and deep learning methods, working at the forefront of equivariant machine learning, differentiable programming, and the Julia programming langauge.<br>
+      <div class="prompt">My main interests are at the intersection of Optics, Computer Vision, and Astronomy. Specifically, how can we embed inductive biasses from optical physics into computer vision problems? Similarly, how can we use techniques from computer vision to solve problems in astronomical imaging? I am of course also interested in problems that fall strictly within one those three domains. I am especially interested in problems at the forefront of equivariant machine learning, differentiable programming, and/or the Julia programming langauge.<br>
    </div>
 
 <img src="silly.png" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;">
