--- a/list.html
+++ b/list.html
@@ -117,21 +117,13 @@
 <body>
   <div class="terminal">
     <div class="terminal-body"> 
-      <div class="prompt">$ Eddie Berman / About <a href="index.html" style="color: #ff3333;">   (Back)</a></div><br>
-      <div class="prompt">My main interests are at the intersection of Optics, Computer Vision, and Astronomy. Specifically, how can we embed inductive biases from optical physics into computer vision problems? Similarly, how can we use techniques from computer vision to solve problems in astronomical imaging? I am of course also interested in problems that fall strictly within one of those three domains. I am especially interested in problems at the forefront of equivariant machine learning, differentiable programming, and/or the Julia programming language.<br> <br>
+      <div class="prompt">$ Eddie Berman / Reading <a href="about.html" style="color: #ff3333;">   (Back)</a></div><br>
+      <div class="prompt"> <a href="https://www.cs.virginia.edu/~robins/YouAndYourResearch.html" style="color: #ff3333;" target="_blank">You and Your Research</a></div>
+      <div class="prompt"> <a href="http://www.incompleteideas.net/IncIdeas/BitterLesson.html" style="color: #ff3333;" target="_blank">The Bitter Lesson</a></div>
+    <div class="prompt"> <a href="https://arxiv.org/abs/2303.04745" style="color: #ff3333;" target="_blank">A General Theory of Correct, Incorrect, and Extrinsic Equivariance</a></div>
+    <div class="prompt"> <a href="https://arxiv.org/abs/2210.02984" style="color: #ff3333;" target="_blank">The Lie Derivative for Measuring Learned Equivariance</a></div>
+      <br>
 
-        A lot of my work is focused on next generation imagers like JWST. I model telescope limitations and systematics to enable weak lensing analysis and exoplanet discovery. To achieve this, I work very closely with both domain scientists and applied math specialists. I am fortunate to collaborate with both COSMOS-Web: The JWST Cosmic Origins Survey and AstroAI at Harvard University. I am advised by Professor Jacqueline McCleary in the department of Physics at Northeastern University as well as Professor Robin Walters in Northeastern's Khoury College of Computer Science <a href="https://www.robinwalters.com/" style="color: #ff3333;">Geometric Learning Lab</a>. <br> <br>
-
-        Recently, I've become interested in the question "Does equivariance matter at scale?" for the type of problems I am interested in. If you have strong feelings on <a href="http://www.incompleteideas.net/IncIdeas/BitterLesson.html" style="color: #ff3333;">The Bitter Lesson</a>, please paper plane me :)<br><br> For a full reading list, go <a href="list.html" style="color: #ff3333;">here</a> :D <br> <br>
-      </div> <br>
-
-   <img src="IMG_6964.JPEG" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"> <br>
-   <img src="IMG_4435.jpg" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"> <br>
-<img src="silly.png" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;">
-      <br><div class="input">Jukebox</div> 
-      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator&theme=0" width="50%" height="75" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-<a href="ascii-art.txt"></a>
-     </div>
       </div>
     </div>
   </div>
