--- a/about.html
+++ b/about.html
@@ -123,7 +123,9 @@
         A lot of my work is focused on next generation imagers like JWST. I model telescope limitations and systematics to enable weak lensing analysis and exoplanet discovery. To achieve this, I work very closely with both domain scientists and applied math specialists. I am fortunate to collaborate with both COSMOS-Web: The JWST Cosmic Origins Survey and AstroAI at Harvard University. I am advised by Professor Jacqueline McCleary in the department of Physics at Northeastern University as well as Professor Robin Walters in Northeastern's Khoury College of Computer Science <a href="https://www.robinwalters.com/" style="color: #ff3333;">Geometric Learning Lab</a>. <br> <br>
 
         Recently, I've become interested in the question "Does equivariance matter at scale?" for the type of problems I am interested in. If you have strong feelings on <a href="http://www.incompleteideas.net/IncIdeas/BitterLesson.html" style="color: #ff3333;">The Bitter Lesson</a>, please paper plane me :)<br><br> For a full reading list, go <a href="list.html" style="color: #ff3333;">here</a> :D <br> <br>
-      </div> <br>
+      </div> 
+
+      <div class="prompt">Below, you can find a couple of pictures of me where I am most happy ^_^, usually when I am attending conferences with my <a href="https://ebrmn.space/peeps.html" style="color: #ff3333;">friends</a> and traversing the local neighborhood</div> <br>
 
    <img src="IMG_6964.JPEG" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"> <br>
    <img src="IMG_4435.jpg" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"> <br>
