--- a/peeps.html
+++ b/peeps.html
@@ -22,14 +22,16 @@
             font-family: monospace;
         }
   body {
-    background-image: url('JWST.jpeg');
+    background-image: url('alt_astro_out.png');
+    font-size: 20px; /* Adjust this to your preferred size */
     background-size: cover; /* Cover the entire window */
     background-position: center center; /* Center the image in the window */
     background-attachment: fixed;
     
     background-color: #0a0a0a;
     font-family: 'Courier New', Courier, monospace;
-    color: #33ff33;
+    font-weight: bold; /* Make the font bolder */
+    color: #ff3333;
     margin: 0;
     line-height: 1.5; /* Increase the line-height for more space between lines */
     padding: 0;
@@ -44,7 +46,7 @@
     /*background-color: #0d0d0d;*/
     border-radius: 5px;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
+    box-shadow: 0 0 10px rgba(255, 51, 51, 0.5);
     width: 80%; /* Adjust the width as per your requirement */
     max-width: 1000px; /* Optional: if you want to limit the maximum width */
     max-height: 90vh; /* Prevent terminal from exceeding viewport height */
@@ -114,25 +116,21 @@
 </head>
 <body>
   <div class="terminal">
-    <!--<div class="terminal-header">
-      <span class="dot red-dot"></span>
-      <span class="dot yellow-dot"></span>
-      <span class="dot green-dot"></span>-
-    </div>-->
     <div class="terminal-body"> 
-      <div class="prompt">Eddie Berman / A List of People I Know <a href="index.html" style="color: #33ff33;">   (Back)</a><br> <br>
+    <div class="terminal-body"> 
+      <div class="prompt">Eddie Berman / A List of People I Know <a href="about.html" style="color: #ff3333;">   (Back)</a><br> <br>
       
         <div class="prompt">To know me is to know my friends :) </div><br> 
-        <div class="prompt">&gt; <a href="https://priime.dev" style="color: #33ff33;" target="_blank">Lucus</a> </div> 
-        <div class="prompt">&gt; <a href="https://jakegines.in/" style="color: #33ff33;" target="_blank">Jake</a> </div> 
-        <div class="prompt">&gt; <a href="https://federico.codes/" style="color: #33ff33;" target="_blank">Federico</a> </div> 
-        <div class="prompt">&gt; <a href="https://noahshinn.com/" style="color: #33ff33;" target="_blank">Noah</a> </div> 
-        <div class="prompt">&gt; <a href="https://www.rzhu.cc/" style="color: #33ff33;" target="_blank">Ryan</a> </div> 
-        <div class="prompt">&gt; <a href="https://cadentj.com/" style="color: #33ff33;" target="_blank">Caden</a> </div> 
-        <div class="prompt">&gt; <a href="https://www.luisali.com/" style="color: #33ff33;" target="_blank">Luisa</a> </div> 
-        <div class="prompt">&gt; <a href="https://www.becklabash.com/" style="color: #33ff33;" target="_blank">Beck</a> </div> 
-        <div class="prompt">&gt; <a href="https://zack-eisbach-wkpfa.ondigitalocean.app/" style="color: #33ff33;" target="_blank">Zack</a> </div> 
-        <div class="prompt">&gt; <a href="https://mtedeschi.xyz/" style="color: #33ff33;" target="_blank">Mauricio</a> </div> 
+        <div class="prompt">&gt; <a href="https://priime.dev" style="color: #ff3333;" target="_blank">Lucus</a> </div> 
+        <div class="prompt">&gt; <a href="https://jakegines.in/" style="color: #ff3333;" target="_blank">Jake</a> </div> 
+        <div class="prompt">&gt; <a href="https://federico.codes/" style="color: #ff3333;" target="_blank">Federico</a> </div> 
+        <div class="prompt">&gt; <a href="https://noahshinn.com/" style="color: #ff3333;" target="_blank">Noah</a> </div> 
+        <div class="prompt">&gt; <a href="https://www.rzhu.cc/" style="color: #ff3333;" target="_blank">Ryan</a> </div> 
+        <div class="prompt">&gt; <a href="https://cadentj.com/" style="color: #ff3333;" target="_blank">Caden</a> </div> 
+        <div class="prompt">&gt; <a href="https://www.luisali.com/" style="color: #ff3333;" target="_blank">Luisa</a> </div> 
+        <div class="prompt">&gt; <a href="https://www.becklabash.com/" style="color: #ff3333;" target="_blank">Beck</a> </div> 
+        <div class="prompt">&gt; <a href="https://zack-eisbach-wkpfa.ondigitalocean.app/" style="color: #ff3333;" target="_blank">Zack</a> </div> 
+        <div class="prompt">&gt; <a href="https://mtedeschi.xyz/" style="color: #ff3333;" target="_blank">Mauricio</a> </div> 
 
 
       </div>
