--- a/peeps.html
+++ b/peeps.html
@@ -131,7 +131,7 @@
         <div class="prompt">&gt; <a href="https://www.becklabash.com/" style="color: #ff3333;" target="_blank">Beck</a> </div> 
         <div class="prompt">&gt; <a href="https://zack-eisbach-wkpfa.ondigitalocean.app/" style="color: #ff3333;" target="_blank">Zack</a> </div> 
         <div class="prompt">&gt; <a href="https://mtedeschi.xyz/" style="color: #ff3333;" target="_blank">Mauricio</a> </div> 
-
+        <div class="prompt">&gt; <a href="https://www.andyzhou.ai" style="color: #ff3333;" target="_blank">Andy</a> </div> 
 
       </div>
     </div>
