--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
       <br><div class="input">Coordinates</div> 
       <div class="input">&gt; email: f(berman,  ed, northeastern) where f(x,y,z) = x.y@z.edu</div> 
       <div class="input">&gt; Geometric Learning Lab and Cosmology Group, Northeastern University</div> 
+      <div class="input">&gt; <a href="https://cosmos.astro.caltech.edu/page/cosmosweb" style="color: #ff3333;" target="_blank">kCOSMOS-Web</a> and <a href="https://astroai.cfa.harvard.edu/" style="color: #ff3333;" target="_blank">AstroAI</a> Collaborations</div> 
     </div>
 <a href="ascii-art.txt"></a>
      </div>
