--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
       <div class="prompt">&gt; <a href="about.html" style="color: #ff3333;">About</a>, <a href="publications.html" style="color: #ff3333;">Publications</a>, <a href="https://scholar.google.com/citations?user=rMjtDxQAAAAJ&hl=en&authuser=2" target="_blank" style="color: #ff3333;">Google Scholar</a>, <a href="https://github.com/EdwardBerman" target="_blank" style="color: #ff3333;">GitHub</a> </div> 
       <br><div class="input">Coordinates</div> 
       <div class="input">&gt; email: f(berman,  ed, northeastern) where f(x,y,z) = x.y@z.edu</div> 
-      <div class="input">&gt; Geometric Learning Lab and Cosmology Group, Northeastern University</div> 
-      <div class="input">&gt; <a href="https://cosmos.astro.caltech.edu/page/cosmosweb" style="color: #ff3333;" target="_blank">COSMOS-Web</a> and <a href="https://astroai.cfa.harvard.edu/" style="color: #ff3333;" target="_blank">AstroAI</a> Collaborations</div> 
+      <div class="input">&gt; <a href="https://www.robinwalters.com/" target="_blank" style="color: #ff3333;">Geometric Learning Lab</a> and Cosmology Group, Northeastern University</div> 
+      <div class="input">&gt; Visiting at the Center for Astrophysics Harvard | Smithsonian with <a href="https://astroai.cfa.harvard.edu/" style="color: #ff3333;" target="_blank">AstroAI</a></div> 
     </div>
 <a href="ascii-art.txt"></a>
      </div>
