--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
 
         I am advised by Professor Jacqueline McCleary in the department of Physics at Northeastern University as well as Professor Robin Walters in Northeastern's Khoury College of Computer Science <a href="https://www.robinwalters.com/" style="color: #ff3333;">Geometric Learning Lab</a>. This summer I will be visiting with the AstroAI group at the CfA.<br> <br>
 
-        Recently, I've become interested in the question "Does equivariance matter at scale?" for the type of problems I am interested in. If you have strong feelings on <a href="http://www.incompleteideas.net/IncIdeas/BitterLesson.html" style="color: #ff3333;">The Bitter Lesson</a>, please paper plane me :)<br><br> For a full reading list, go <a href="list.html" style="color: #ff3333;">here</a> :D <br> <br>
+ For an up-to-date reading list, go <a href="list.html" style="color: #ff3333;">here</a>, and paper plane me your thoughts :D <br> <br>
       </div> 
 
       <div class="prompt">Below, you can find a couple of pictures of me where I am most happy ^_^, usually when I am attending conferences with my <a href="https://ebrmn.space/peeps.html" style="color: #ff3333;">friends</a> and traversing the local neighborhood</div> <br>
