--- a/list.html
+++ b/list.html
@@ -118,7 +118,7 @@
   <div class="terminal">
     <div class="terminal-body"> 
       <div class="prompt">$ Eddie Berman / Reading <a href="about.html" style="color: #ff3333;">   (Back)</a></div><br>
-      <div class="prompt"> Some favorites :3</div><br>
+      <div class="prompt"> Some favorites :)</div><br>
       <div class="prompt"> <a href="https://bayes.wustl.edu/etj/articles/prior.pdf" style="color: #ff3333;" target="_blank">Prior Probabilities</a></div>
       <div class="prompt"> <a href="https://www.cs.virginia.edu/~robins/YouAndYourResearch.html" style="color: #ff3333;" target="_blank">You and Your Research</a></div>
       <div class="prompt"> <a href="http://www.incompleteideas.net/IncIdeas/BitterLesson.html" style="color: #ff3333;" target="_blank">The Bitter Lesson</a></div>
