--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
 
         I am advised by Professor Jacqueline McCleary with the Northeastern University Cosmology Group as well as Professor Robin Walters with the <a href="https://www.robinwalters.com/" style="color: #ff3333;">Geometric Learning Lab</a>. This summer I will be visiting with the AstroAI group at the Center for Astrophysics Harvard and Smithsonian with Cecilia Garraffo.<br> <br>
 
- Here's what's been occupying my mind <a href="list.html" style="color: #ff3333;">lately</a>, do snail mail me your thoughts <br> <br>
+ Here's <a href="list.html" style="color: #ff3333;">some material</a> that's been occupying my mind lately, do snail mail me your thoughts <br> <br>
       </div> 
 
       <div class="prompt">Below, you can find a couple of pictures of me where I am most happy ^_^, usually when I am attending conferences with my <a href="https://ebrmn.space/peeps.html" style="color: #ff3333;">friends</a> and traversing the local neighborhood</div> <br>
